--- a/Text_Rpg/CharacterCreator/CharacterCreatorMenu.xaml
+++ b/Text_Rpg/CharacterCreator/CharacterCreatorMenu.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Text_Rpg.CharacterCreatorMenu"
+﻿<Window x:Class="Text_Rpg.CharacterCreator.CharacterCreatorMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Character Creator" Height="450" Width="800" FontSize="14">
