--- a/Text_Rpg/App.xaml
+++ b/Text_Rpg/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Text_Rpg"
-             StartupUri="MainMenu.xaml">
+             StartupUri="UI\MainMenu.xaml">
     <Application.Resources>
          
     </Application.Resources>
